crates/swc_ecma_parser/tests/errors/strict-mode/delete-ident/input.js
"use strict";
// In strict mode JS, delete on identifier should emit TS1102
delete a;
